--- a/DuelMonstersOfTheMultiverse/DuelMonstersOfTheMultiverse.csproj
+++ b/DuelMonstersOfTheMultiverse/DuelMonstersOfTheMultiverse.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{44F8C838-553C-482C-B389-2B375B8590C9}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>DuelMonstersOfTheMultiverse</RootNamespace>
+    <RootNamespace>DMotM</RootNamespace>
     <AssemblyName>DuelMonstersOfTheMultiverse</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
