Remove the StartCoroutineEx extenstion method because it will not work with unit tests. Altered ChazzPrinceton's powers to work with unit tests. Wrote a couple unit tests for ChazzPrinceton.

--- a/DuelMonstersOfTheMultiverse/DuelMonstersOfTheMultiverse.csproj
+++ b/DuelMonstersOfTheMultiverse/DuelMonstersOfTheMultiverse.csproj
@@ -69,5 +69,8 @@
   <ItemGroup>
     <Content Include="SotM_YGO.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="MaximillionPegasus\" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
