--- a/DuelMonstersOfTheMultiverse/DuelMonstersOfTheMultiverse.csproj
+++ b/DuelMonstersOfTheMultiverse/DuelMonstersOfTheMultiverse.csproj
@@ -61,6 +61,7 @@
     <Compile Include="ChazzPrinceton\YouGoByeByeCardController.cs" />
     <Compile Include="ChazzPrinceton\ZMetalTankCardController.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="ModConstants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
