--- a/DuelMonstersOfTheMultiverse_Tests/DuelMonstersOfTheMultiverseTests.csproj
+++ b/DuelMonstersOfTheMultiverse_Tests/DuelMonstersOfTheMultiverseTests.csproj
@@ -47,6 +47,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChazzPrinceton\ArmedDragonLv3CardControllerTests.cs" />
     <Compile Include="ChazzPrinceton\ChazzPrincetonCharacterCardControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BaseTest.cs" />
