Added code and units tests for Armed Dragon Lv7 in the Chazz Princeton deck

--- a/DuelMonstersOfTheMultiverse_Tests/DuelMonstersOfTheMultiverseTests.csproj
+++ b/DuelMonstersOfTheMultiverse_Tests/DuelMonstersOfTheMultiverseTests.csproj
@@ -47,6 +47,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChazzPrinceton\ArmedDragonLv7CardControllerTests.cs" />
     <Compile Include="ChazzPrinceton\ArmedDragonLv5CardControllerTests.cs" />
     <Compile Include="ChazzPrinceton\ArmedDragonLv3CardControllerTests.cs" />
     <Compile Include="ChazzPrinceton\ChazzPrincetonCharacterCardControllerTests.cs" />
