--- a/DuelMonstersOfTheMultiverse_Tests/DuelMonstersOfTheMultiverseTests.csproj
+++ b/DuelMonstersOfTheMultiverse_Tests/DuelMonstersOfTheMultiverseTests.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="ChazzPrinceton\ArmedDragonLv10CardControllerTests.cs" />
     <Compile Include="ChazzPrinceton\ChazzPrincetonBaseTest.cs" />
+    <Compile Include="ChazzPrinceton\XHeadCannonCardControllerTests.cs" />
     <Compile Include="ChazzPrinceton\WWingCatapultCardControllerTests.cs" />
     <Compile Include="ChazzPrinceton\VTigerJetCardControllerTests.cs" />
     <Compile Include="ChazzPrinceton\ArmedDragonLv7CardControllerTests.cs" />
@@ -59,7 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="DiffidentDeckard_SotMBaseMod">
-      <Version>1.0.8303.694</Version>
+      <Version>1.0.8304.40572</Version>
     </PackageReference>
     <PackageReference Include="NUnit">
       <Version>3.13.3</Version>
